set cards to align-items:flex-start to prevent horizontal stretching

--- a/odin-sign-up/style.css
+++ b/odin-sign-up/style.css
@@ -78,6 +78,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
   width: 60vw;
 }
 
@@ -85,10 +86,14 @@ h1 {
   padding: 20px 30px;
 }
 
+.intro {
+  font-size: 1.5rem;
+}
+
 .form {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 10px;
+  grid-gap: 20px;
   box-shadow: var(--shadow) 0px 0px 5px;
   opacity: 0.666;
 }
